--- a/style/global.css
+++ b/style/global.css
@@ -18,14 +18,24 @@
 
     --font-family: "Poppins", sans-serif;
     --text: 16px/150% var(--font-family);
-    --text-lg: bold 32px/125% var(var(--font-family));
+    --text-lg: bold 32px/125% var(--font-family);
     --text-md: 14px/175% var(--font-family);
     --text-sm: 12px/175% var(--font-family);
 }
 
 
 body{
-    font: var(--text-lg);
+    font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: var(--brand-color);
+    text-decoration: underline;
 }
